<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question"
        style="@style/CustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <RadioGroup
        android:id="@+id/variants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="changeRadioGroup"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_text1" />

        <RadioButton
            android:id="@+id/radioButton2"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_text2" />

        <RadioButton
            android:id="@+id/radioButton3"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_text3" />

        <RadioButton
            android:id="@+id/radioButton4"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_text4" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="previousBtn"
            android:text="@string/back" />


        <Button
            android:id="@+id/hint"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="hintBtn"
            android:text="@string/hint" />

        <Button
            android:id="@+id/next"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="nextBtn"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>

